--- a/global_templates/global/base.html
+++ b/global_templates/global/base.html
@@ -1,3 +1,4 @@
+{% load static %}
 <!DOCTYPE html>
 <html lang="pt-BR">
     <head>
@@ -16,6 +17,7 @@
             {% include 'global/partials/pagination.html' %}
         </main>
         {% include 'global/partials/footer.html' %}
+        <script src="{% static 'global/js/script.js' %}"></script>
     </body>
 </html>
 </html>
